# rpy-motion-detector

./: .gitignore  LICENSE  README.md  pyproject.toml  stream_to_file.sh
.github/workflows/: python-package.yml
config/: default.ini
src/: main.py
src/rpy_motion_detector/: __main__.py  cli.py  config.py  frame_detection.py  motion_detector.py  run.py
src/rpy_motion_detector/config/: default.ini  default.toml
